--- a/src/Screen/NavBar.module.css
+++ b/src/Screen/NavBar.module.css
@@ -1,3 +1,6 @@
+.mainBlock{
+    display: block;
+}
 .navbar{
     display: flex;
     justify-content: center;
@@ -6,11 +9,11 @@
     padding: 0 56px;
     z-index: 99;
     width: 100%;
-    margin: 0 auto;
     box-shadow: 0 2px 4px #00000026;
     box-sizing: border-box;
     letter-spacing: 0;
     outline: 0;
+    position: fixed;
 }
 .heading{
     display: flex;
