--- a/src/Screen/Recent.module.css
+++ b/src/Screen/Recent.module.css
@@ -1,4 +1,20 @@
-.container{
+.mainDiv{
     display: flex;
     padding-top: 180px !important;
+}
+.recentContainer{
+    display: flex;
+    width:auto;
+    flex-direction: column;
+    border: 1px solid gray;
+    padding: 2px;
+    border-radius: 7px;
+    margin-left: 100px;
+}
+.recentContents > h1{
+    display: flex;
+    margin: 0;
+}
+.recentContents{
+    object-fit: contain;
 }
