--- a/src/Screen/Recent.module.css
+++ b/src/Screen/Recent.module.css
@@ -4,17 +4,24 @@
 }
 .recentContainer{
     display: flex;
-    width:auto;
-    flex-direction: column;
+    width:60%;
     border: 1px solid gray;
     padding: 2px;
     border-radius: 7px;
     margin-left: 100px;
+    color: #4a4a4a;
 }
-.recentContents > h1{
+.recentContents > h3{
     display: flex;
     margin: 0;
+    font-weight: 500;
+    letter-spacing: 0;
 }
 .recentContents{
     object-fit: contain;
+}
+.advertisement{
+    width: 30%;
+    margin-left: 50px;
+    color: #4a4a4a;
 }
