--- a/src/Screen/Recent.module.css
+++ b/src/Screen/Recent.module.css
@@ -10,10 +10,12 @@
     border-radius: 7px;
     margin-left: 100px;
     color: #4a4a4a;
+    min-height: 200px;
 }
 .recentContents > h3{
     display: flex;
     margin: 0;
+    padding: 20px;
     font-weight: 500;
     letter-spacing: 0;
 }
