--- a/src/Screen/Recent.module.css
+++ b/src/Screen/Recent.module.css
@@ -1,26 +1,23 @@
 .mainDiv{
     display: flex;
-    padding-top: 180px !important;
+    margin: 80px 0 40px 100px;
 }
 .recentContainer{
     display: flex;
     width:60%;
-    border: 1px solid gray;
+    border: .5px solid gray;
     padding: 2px;
     border-radius: 7px;
-    margin-left: 100px;
     color: #4a4a4a;
     min-height: 200px;
+    box-shadow: 0 2px 4px #00000026;
 }
 .recentContents > h3{
     display: flex;
-    margin: 0;
-    padding: 20px;
+    margin: 10px;
+    padding: 5px;
     font-weight: 500;
     letter-spacing: 0;
-}
-.recentContents{
-    object-fit: contain;
 }
 .advertisement{
     width: 30%;
