--- a/src/Components/Contests/CurrentContest.module.css
+++ b/src/Components/Contests/CurrentContest.module.css
@@ -1,10 +1,18 @@
 .CurrentContestMain{
     display: flex;
     flex-direction: column;
-    margin: 40px;
+    margin: 70px;
+    border: 1px solid #d2d9e7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    color: #4a4a4a;
+    padding-left: 5px;
+    width: 50%;
+    background: #f6f8fb;
 }
-.innerCurrentContestMain{
+.innerCurrentContestItems{
     font-weight: 500;
     display: flex;
-    margin: 5px 7px 0 7px;
+    margin: 5px 7px;
+    padding-bottom: 10px;
 }
