--- a/src/Components/Contests/PastContest.module.css
+++ b/src/Components/Contests/PastContest.module.css
@@ -1,13 +1,26 @@
 .pastContestMain{
     display: flex;
     flex-direction: column;
+    margin: 70px;
+    border: 1px solid #d2d9e7;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background: transparent;
+    color: #4a4a4a;
+    padding-left: 3px;
+    width: 50%;
+    background: #f6f8fb;
 }
 .pastHeading{
     display: flex;
-    margin: 40px 40px 10px 40px;
+    padding-left: 5px;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 .pastContestitems{
-    margin: 0 25px;
-    padding:7px 0;
     font-weight: 500;
+    padding-left: 5px;
+    margin-top: 0;
+    margin-left: 5px;
+    margin-bottom: 0;
 }
