--- a/src/Screen/Contest.module.css
+++ b/src/Screen/Contest.module.css
@@ -6,6 +6,8 @@
     width: 56.5%;
     border-radius: 7px;
     border: .5px solid gray;
+    background: #f6f8fb;
+    border: 1px solid #d2d9e7;
 }
 .contestNames > h3{
     padding: 5px;
