--- a/src/Components/Contests/CurrentContest.module.css
+++ b/src/Components/Contests/CurrentContest.module.css
@@ -1,18 +1,31 @@
 .CurrentContestMain{
     display: flex;
     flex-direction: column;
-    margin: 70px;
-    border: 1px solid #d2d9e7;
     border-radius: 5px;
     box-sizing: border-box;
     color: #4a4a4a;
-    padding-left: 5px;
-    width: 50%;
-    background: #f6f8fb;
+    margin-left: auto;
+    margin-right: auto;
+    width: 967px;
+    margin-top: 20px !important;
+    padding: 0.3em 0.5em;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 5px 2px rgb(0 0 0 / 30%);
 }
-.innerCurrentContestItems{
-    font-weight: 500;
+.ongoingHeading{
+    color: #4a4a4a;
+    margin: 5px;
+}
+.ongoingContestItems{
     display: flex;
-    margin: 5px 7px;
-    padding-bottom: 10px;
+    margin: 10px 17px;
+}
+.ongoingContestItems > a{
+    text-decoration: underline;
+    font-weight: 500;
+    color: #666;
+    font-size: 18px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+    font-weight: 600;
+    padding: 2px;
 }
