--- a/src/Components/Contests/PastContest.module.css
+++ b/src/Components/Contests/PastContest.module.css
@@ -2,25 +2,39 @@
     display: flex;
     flex-direction: column;
     margin: 70px;
-    border: 1px solid #d2d9e7;
     border-radius: 5px;
     box-sizing: border-box;
-    background: transparent;
-    color: #4a4a4a;
-    padding-left: 3px;
-    width: 50%;
-    background: #f6f8fb;
+    margin-left: auto;
+    margin-right: auto;
+    width: 967px;
+    margin-top: 20px !important;
+    padding: 0.3em 0.5em;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 5px 2px rgb(0 0 0 / 30%);
 }
 .pastHeading{
-    display: flex;
-    padding-left: 5px;
-    margin-top: 10px;
-    margin-bottom: 0;
+    color: #4a4a4a;
+    margin: 5px;
 }
 .pastContestitems{
+    display: flex;
+    flex-direction: column;
+    margin: 10px 17px;
+}
+.pastContestitems > a {
+    display: flex;
+    flex-direction: column;
+    text-decoration: underline;
     font-weight: 500;
-    padding-left: 5px;
-    margin-top: 0;
-    margin-left: 5px;
-    margin-bottom: 0;
+    color: #666;
+    font-size: 18px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+    font-weight: 600;
+    padding: 2px;
+}
+.pastText{
+    display:flex;
+    flex-direction: column;
+    margin: 0px !important;
+    padding: 0;
 }
