--- a/src/Screen/Recent.module.css
+++ b/src/Screen/Recent.module.css
@@ -14,12 +14,14 @@
     background: #f6f8fb;
     border: 1px solid #d2d9e7;
 }
-.recentContents > h3{
-    display: flex;
-    margin: 10px;
-    padding: 5px;
-    font-weight: 500;
-    letter-spacing: 0;
+.recentContents > img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;
+    cursor: pointer;
 }
 .advertisement{
     width: 30%;
