--- a/src/Components/UI/Input.module.css
+++ b/src/Components/UI/Input.module.css
@@ -1,4 +1,4 @@
-.login {
+/* .login {
     width: 90%;
     max-width: 40rem;
     margin: 2rem auto;
@@ -49,4 +49,33 @@
         flex-direction: row;
     }
 
+} */
+.inputControl{
+    height: 30px;
+    width: 300px;
+    border-radius: 3px;
+    padding: 0.375rem 0.75rem;
+    color: rgb(52, 51, 51);
+    background-color: #f0f4f8;
+    border: 1px solid #bcccdc;
+    overflow: visible;
+    line-height: 1.15;
+    font-size: 100%;
+    font-family: "Cabin", Sans-Serif;
+    margin-bottom: 0.5rem;
+    border: 1px solid gray;
+}
+.control{
+    display: flex;
+    flex-direction: column;
+    text-transform: capitalize;
+}
+.headingControl{
+    margin-bottom: 0.5rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+    line-height: 1.75;
+    color: rgb(52, 51, 51);
+    font-family: "Cabin", Sans-Serif;
+    font-size: 14px;
 }
