--- a/src/Components/Contests/PastContest.module.css
+++ b/src/Components/Contests/PastContest.module.css
@@ -9,8 +9,12 @@
     width: 967px;
     margin-top: 20px !important;
     padding: 0.3em 0.5em;
+    background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0 4px 5px 2px rgb(0 0 0 / 30%);
+}
+.pastContestTopHead{
+    padding-top: 30px !important;
 }
 .pastHeading{
     color: #4a4a4a;
