--- a/src/Pages/Questions.module.css
+++ b/src/Pages/Questions.module.css
@@ -1,62 +1,50 @@
 .questionsMain{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    color: #4a4a4a;
-    background-color: #f6f8fb;
-    margin-top: 2px !important;
-}
-.questionsTextStyle{
-    display: block;
-    margin: 10px;
-    margin-left: auto;
-    font-weight: 400;
-    margin-right: auto;
-}
-.questionsAnswerStyle{
-    float: left;
-    margin-bottom: 10px;
+    color:#4a4a4a;
 }
 .questionsContestNameHeading{
-    display: flex;
-    margin-top: 50px;
-    margin-bottom: 5px;
-    text-decoration:underline;
-}
-.questionUploadButton,
-.questionUploadNewQuestionButton{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left:auto;
+    margin-right:auto;
+    text-decoration: underline;
+}
+.questionContainerMain{
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+}
+.questionsTextStyle{
+    margin-left: 20px;
+    padding-top: 0;
+}
+.questionUploadButton{
+    display: block;
+    margin-left: 40px;
     margin-top: 5px;
-    padding: 8px 16px;
+    align-items: center;
+    justify-content: center;
+    width: 100px !important;
     color: white;
+    padding: 4px;
+    align-items: center;
     font-size: 1.25rem;
     cursor: pointer;
     border: transparent;
     border-radius: 0.25rem;
-    font-weight: 500;
-    height: 35px;
+    font-weight: 400;
+    height: 25px;
+    letter-spacing: 0px;
     overflow: visible;
     font-family: "Cabin", Sans-Serif;
-    font-size: 100%;
+    font-size: 13px;
     line-height: 1.15;
     background-color: #4a4a4a;
     text-decoration: none;
-    justify-content: center;
     text-align: center;
+    margin-bottom: 0;
 }
-.questionUploadNewQuestionButton{
-    margin-top: 10px;
-}
-.horizontalLine{
-    border: .1px solid #d5cfcf !important;
-    width: 100%;
-}
-.questionUploadButton:hover,
-.questionUploadNewQuestionButton:hover{
-    background-color: #696363;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-      0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    transition: 300ms ease-in-out all;
+.questionNewUploadButton{
+    width: 150px !important;
+    padding: 5px;
 }
